public/stylesheets/styles.css
/* ... */
.p-y-2 { padding-top: 10px  !important; padding-bottom: 10px !important; }
.p-x-3 { padding-right: 20px !important; padding-left: 20px !important; }
.p-a-1 { padding: 10px !important; }
.add-border-a { border:        2px solid #666; }
.add-border-t { border-top:    2px solid #666; }
.add-border-r { border-right:  2px solid #666; }
.add-border-b { border-bottom: 2px solid #666; }
.add-border-l { border-left:   2px solid #666; }

/* Grid */
@media only screen and (min-width: 0) {
  .flex-s { display: flex; flex-direction: column; }
  .box-1 { order: 1; }
  .box-2 { order: 2; }
  .box-3 { order: 3; }
  .box-4 { order: 4; }
}
@media only screen and (min-width: 601px) {
  .flex-s { display: block; }
}

/* Container Reset */
@media only screen and (min-width: 0) {
  .container { width: 94%; }
}
@media only screen and (min-width: 601px) {
  .container { width: 90%; }
}
@media only screen and (min-width: 992px) {
  .container { width: 975px; }
}
@media only screen and (min-width: 1200px) {
  .container { width: 975px; }
}


/* Font Awesome Fix */
@media only screen and (min-width: 0) {
  .fa-1x { font-size: 1em !important; }
  .fa-2x { font-size: 1.4em !important; }
  .fa-3x { font-size: 1.8em !important; }
  .fa-4x { font-size: 2em !important; }
  .fa-5x { font-size: 2.5em !important; }
  .fa-cx { font-size: 2em !important; }
}
@media only screen and (min-width: 601px) {
  .fa-1x { font-size: 1em !important; }
  .fa-2x { font-size: 1.5em !important; }
  .fa-3x { font-size: 2em !important; }
  .fa-4x { font-size: 2.5em !important; }
  .fa-5x { font-size: 2.3em !important; }
}
@media only screen and (min-width: 992px) {
  .fa-1x { font-size: 1em !important; }
  .fa-2x { font-size: 1.2em !important; }
  .fa-3x { font-size: 2em !important; }
  .fa-4x { font-size: 2.4em !important; }
  .fa-5x { font-size: 3em !important; }
}
@media only screen and (min-width: 1200px) {
  .fa-1x { font-size: 1em !important; }
  .fa-2x { font-size: 2em !important; }
  .fa-3x { font-size: 3em !important; }
  .fa-4x { font-size: 4em !important; }
  .fa-5x { font-size: 5em !important; }
}

/* Input */
::-webkit-input-placeholder { color: #9e9e9e !important; }
 :-moz-placeholder          { color: #9e9e9e !important; }
::-moz-placeholder          { color: #9e9e9e !important; }
 :-ms-input-placeholder     { color: #9e9e9e !important; }
 .input-file-mod {
   position: absolute;
   margin-top: -2rem;
   font-size: 0.9em;
 }

/* Admin */
@media only screen and (min-width: 0) {
  .legend {
    display: block;
    position: relative;
    margin-right: 20px;
  }
  .legend span {
    display: block;
    text-align: right;
    margin-left: 10px;
    font-size: .25em !important;
    line-height: 1;
  }
}
@media only screen and (min-width: 601px) {
  .legend {
    display: block;
    position: relative;
    margin-right: 20px;
  }
  .legend span {
    display: inline-block;
    text-align: right;
    margin-left: 10px;
    font-size: .333333em !important;
  }
}
@media only screen and (min-width: 992px) {
  .legend {
    display: block;
    position: relative;
    margin-right: 20px;
  }
  .legend span {
    display: inline-block;
    text-align: right;
    margin-left: 10px;
    font-size: .333333em !important;
  }
}
@media only screen and (min-width: 1200px) {}

/*
 *  Navbar
 */
.d-clock {
  font-family: 'BulkyPixels', sans-serif;
  clear: none;
}
@media only screen and (min-width: 0) {
  .logo-d { display: none; }
  .logo-m { display: block; }
  .logo-img { height: 36px; margin-top: 6px;}
  nav {
    height: 51px;
    line-height: 51px;
  }
  nav .button-collapse {
    height: 51px;
  }
  nav .button-collapse i {
    height: 51px;
    line-height: 51px;
  }
  .nav-item { padding: 0px; }
  nav ul a.mod { padding: 0; }

  .side-nav li:not(.divider) {
    height: 50px;
  }

  .side-nav a {
    height: auto;
    line-height: 15px;
    padding: 17px;
  }

  #cart-modal .fa-shopping-cart {
    margin-right: 10px;
  }

  #cart-modal ul > li {
    padding: 10px;
    border-bottom: 1px solid #b3b3b3;
  }

  #cart-modal .checkout {
    padding-top: 10px;
  }
  .btn.btn-floating.cart-top {
    padding-top: 7px;
    width: 50px;
    height: 50px;
    text-align: center;
  }

  #dropdown-profile {
    min-width: 180px;
  }
  /*i.right {
    line-height: 50px;
    vertical-align: middle;
  }*/
  .btn-profile {
    height: 40px;
    width: 40px;
    line-height: 3.5;
    vertical-align: middle;
    margin-top: -8px;
  }
  .d-clock {
    position: absolute;
    font-size: 2em;
    line-height: 51px;
    margin-top: 5px;
    margin-left: 20px;
  }
  .btn-mobile {
    padding: 0;
  }
}
@media only screen and (min-width: 601px) {
  .logo-d { display: block; }
  .logo-m { display: none; }
  .logo-img { height: 40px; }
  nav {
    height: 54px;
    line-height: 54px;
  }
  .nav-item { padding: 0 10px; }
  .nav-item.mod { padding: 0px; }
  .btn-profile {
    height: 40px;
    width: 40px;
    line-height: 3.5;
    vertical-align: middle;
  }
  .buy-sticky-wrapper {
    display: block;
    position: fixed;
    /* width: 90%; */
    right: 0;
    bottom: -10px;
    left: 0;
    margin: 0 auto;
    padding: 20px;
    border-top: 2px solid #fff;
    border-left: 2px solid #fff;
    border-right: 2px solid #fff;
    z-index: 200;
  }
  .d-clock {
    position: relative;
    font-size: 3em;
    line-height: 1;
    vertical-align: middle;
    margin: 0;
  }
  .d-clock.label {
    width: auto;
    font-size: 1.5em;
    margin-bottom: 10px;
  }
  .buy-mod-img {
    height: 80px;
    margin-top: 15px;
  }
}
/* ... */

